files/ia/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ollama-allow
  namespace: ia
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pods
      ports:
        - protocol: TCP
          port: 11434
    - ports:
        - protocol: TCP
          port: 11434
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - ipBlock:
            cidr: 10.96.0.0/12
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 104.16.0.0/12
        - ipBlock:
            cidr: 172.64.0.0/13
        - ipBlock:
            cidr: 173.245.48.0/20
        - ipBlock:
            cidr: 198.41.128.0/17
        - ipBlock:
            cidr: 190.93.240.0/20
        - ipBlock:
            cidr: 188.114.96.0/20
      ports:
        - protocol: TCP
          port: 443
